@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=org.gtk.vfs.Daemon
-Exec=@libexecdir@/gvfs-daemon
+Exec=@libexecdir@/gvfsd
